--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <div class="hero">
+        <div class="calendar">
+            <div class="left">
+                <p>01</p>
+                <p>Sunday</p>
+            </div>
+            <div class="right">
+                <p>January</p>
+                <p>2020</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
