--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="hero">
         <div class="calendar">
             <div class="left">
-                <p>01</p>
-                <p>Sunday</p>
+                <p id="date">01</p>
+                <p id="day">Sunday</p>
             </div>
             <div class="right">
-                <p>January</p>
-                <p>2020</p>
+                <p id="month">January</p>
+                <p id="year">2020</p>
             </div>
         </div>
     </div>
